FIND_FILE(IW_HEADER iwlib.h)
FIND_LIBRARY(IW_LIBRARY iw)
IF(NOT IW_HEADER OR NOT IW_LIBRARY)
    MESSAGE(FATAL_ERROR "iwlib not found")
ENDIF(NOT IW_HEADER OR NOT IW_LIBRARY)

GET_FILENAME_COMPONENT(IW_INCLUDE_DIRECTORY ${IW_HEADER} PATH)
INCLUDE_DIRECTORIES(${IW_INCLUDE_DIRECTORY})

SET(libname wifimon-tasks-${OROCOS_TARGET})
ADD_LIBRARY(${libname} SHARED ${CMAKE_SOURCE_DIR}/.orogen/tasks/MonitorBase.cpp Monitor.cpp)
TARGET_APPEND_LDFLAGS(${libname} "${DEPENDENCIES_LDFLAGS}")

TARGET_LINK_LIBRARIES(${libname} ${IW_LIBRARY})

INSTALL(TARGETS ${libname}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/.orogen/tasks/MonitorBase.hpp Monitor.hpp
    DESTINATION include/orocos/wifimon)
