include(wifimonTaskLib)
ADD_LIBRARY(${WIFIMON_TASKLIB_NAME} SHARED 
    ${WIFIMON_TASKLIB_SOURCES})

add_dependencies(${WIFIMON_TASKLIB_NAME}
    regen-toolkit)

# Check for the iwconfig library
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/tasks)
find_package(LinuxWirelesstools)
include_directories(${IW_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(${WIFIMON_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${WIFIMON_TASKLIB_DEPENDENT_LIBRARIES}
    ${IW_LIBRARIES})
SET_TARGET_PROPERTIES(${WIFIMON_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${WIFIMON_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${WIFIMON_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${WIFIMON_TASKLIB_HEADERS}
    DESTINATION include/orocos/wifimon)

